Fixing farnnight_carrousel alignment

--- a/farnnight.css
+++ b/farnnight.css
@@ -23,6 +23,6 @@
 
 #espace_farnnight_carrousel_container {
 	position: relative;
-	left: -46px;
+	left: -30px;
 	border-spacing: 0px;
 }
